fix gitignore for Eclipse projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-/hooks.gson
+i/hooks.gson
 /log.txt
 /build.xml
 # Created by .ignore support plugin (hsz.mobi)
 /Dog.iml
 /.idea
 /target
+/jars/*
+
+# Eclipse ignores
+/.settings
+.classpath
+.project
